--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 h1 {
     color: orange;
     background-color: aqua;
@@ -15,8 +19,10 @@ h2 {
 
 p {
     font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 
 #index {
     text-align: center;
 }
+
